--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -7,3 +7,32 @@ $sidebar-sm-columns:    4;
 
 // Colors
 $brand-primary:         #27ae60;
+
+
+
+// Grid settings
+// -------------------------
+
+$grid-columns:          12;
+$main-sm-columns:       $grid-columns;
+$main-md-columns:       $grid-columns;
+$sidebar-sm-columns:    3;
+$sidebar-2-sm-columns:    2;
+$sidebar-md-columns:    3;
+$sidebar-2-md-columns:    2;
+
+// Brand colors
+// -------------------------
+
+$brand-primary:         #27ae60;
+$brand-bg:         		#fdfdfd;
+
+
+// XS < 768px AUTO
+// SM >= 768px 750px
+// MD >= 992px 970px->width100%; max-width:1280px;
+// LG >= 1200px 1170px->width100%; max-width:1440px;
+$screen-xl:                  1440px !default;
+$screen-xl-min:              $screen-xl !default;
+//** Deprecated `$screen-lg-desktop` as of v3.0.1
+$screen-xl-desktop:          $screen-xl-min !default;
